--- a/k8s-manifests/argocd/swd-be.yaml
+++ b/k8s-manifests/argocd/swd-be.yaml
@@ -10,6 +10,8 @@ spec:
     repoURL: https://github.com/kadeksuryam-project-1/infrastructure
     targetRevision: HEAD
     path: k8s-manifests/stand-with-dorayaki-be
+    directory:
+      recurse: true 
   destination: 
     server: https://kubernetes.default.svc
     namespace: swd
