feat: add cleanup rs policy for swd app

--- a/k8s-manifests/stand-with-dorayaki-be/deployment.yaml
+++ b/k8s-manifests/stand-with-dorayaki-be/deployment.yaml
@@ -34,3 +34,4 @@ spec:
             items:
               - key: project-1-dorayaki-bucket-access.json
                 path: creds.json
+  revisionHistoryLimit: 0
