feat: add resources limits

--- a/k8s-manifests/stand-with-dorayaki-be/deployment.yaml
+++ b/k8s-manifests/stand-with-dorayaki-be/deployment.yaml
@@ -27,6 +27,11 @@ spec:
               mountPath: /var/secrets/gcp-creds
           ports:
             - containerPort: 8080
+          resources:
+            limits:
+              cpu: 500m
+            requests:
+              cpu: 200m
       volumes:
         - name: gcp-creds
           secret:
